# naoqi

./: README.md
src/: .rosinstall
src/nao_interaction/nao_audio/nodes/: nao_audio.py
src/nao_interaction/nao_interaction_launchers/launch/: nao_vision_interface.launch
src/nao_moveit_config/launch/: planning_context.launch
src/nao_robot/nao_bringup/: nao.launch
src/nao_robot/nao_driver/: CMakeLists.txt
src/nao_robot/nao_driver/launch/: nao_driver.launch
src/nao_robot/nao_driver/nodes/: nao_logger.py  nao_speech.py
src/nao_robot/nao_pose/config/: basic_poses.yaml
src/naoqi_bridge/naoqi_sensors_py/share/: nao_camera_top_640x480.yaml
src/naoqi_bridge_msgs/: CHANGELOG.rst  package.xml
